src/app/components/product-details/product-details.component.css
.product-details {
	line-height: 1.5;
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
	font-size: 1.2rem;
}

.product-details__container {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

@media screen and (min-width: 800px) {
	.product-details__container {
		flex-direction: row;
	}
}

.product-details__details-table {
	display: grid;
	grid-template-columns: 0.1fr 1fr;
	grid-template-rows: repeat(auto-fit, minmax(1rem, auto));
	gap: 1rem;
}

@media screen and (min-width: 800px) {
	.product-details__details-table {
		gap: 2rem;
	}
}

.product-details__details-table > span {
	color: rgb(169, 168, 168);
}

.product-details__details-table p {
	font-weight: bold;
}

.product-details__name {
	font-size: 30px;
}
.product-details__image {
	flex-grow: 0;
	flex-shrink: 0;
	flex-basis: 40%;
}

.product-details__image img {
	max-width: 100%;
}
.product-details__del-way {
	display: flex;
	gap: 1rem;
}

.product-details__actions {
	display: flex;
	justify-content: flex-end;
	gap: 1rem;
	align-items: center;
}

.product-details__actions-container {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.product-details__price {
	font-weight: bold;
	font-size: 1.5rem;
}

.order-button {
	width: 100px;
	display: flex;
	flex-direction: column;
}

.product-details__option {
	padding: 0.3rem 0.5rem;
	background-color: var(--primary);
	border-radius: 4px;
	color: white;
}

.mat-mdc-dialog-content {
	max-height: 100vh;
	position: relative;
}

.header__close-btn {
	position: absolute;
	top: 0.5rem;
	right: 0.5rem;
}

